Issues/30 table vertical stretch (#51)
* Prepared vertical strech. For now is using offset.

* Removed unused .vscode folder

* Removing offset

* Saving selectedPageSize for user

* Extending table to page bottom. Does not work good with bootstrap

* Clearing unnecessary overflow

* Clearing code

* Version update

--- a/src/app/modules/cars/car-detail/car-detail.component.scss
+++ b/src/app/modules/cars/car-detail/car-detail.component.scss
@@ -1,7 +1,19 @@
 :host {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
 
 .last-update-field {
   margin-bottom: 1em;
+}
+
+.jgs-flex-column{
+  display: flex;
+  flex-direction: column;
+
+  &.grow{
+    flex-grow: 1;
+  }
 }
